--- a/css/simulador.css
+++ b/css/simulador.css
@@ -1,5 +1,5 @@
-﻿body
-{
+﻿body {
+    overflow-y: scroll;
 }
 
 #conteudo > div {
@@ -29,7 +29,7 @@
     border: 1px solid white;
     width: 10%;
     font-weight: bold;
-    margin-top: 5px;
+    /*margin-top: 5px;*/
 }
 
 .secundario {
@@ -43,4 +43,8 @@
 
 .panel-body {
     padding-top: 50px;
+}
+
+pre {
+    font-size: 11px;
 }
